fixedDelete
